[gd_scene load_steps=6 format=3 uid="uid://dxe3uwdnorel0"]

[ext_resource type="Script" uid="uid://2orfpt3oeyxu" path="res://Script/hud.gd" id="1_u38dv"]
[ext_resource type="Theme" uid="uid://bymv8vcq70yje" path="res://Theme/Hud.tres" id="2_6p52h"]
[ext_resource type="PackedScene" uid="uid://dve5nsd533h1u" path="res://Scene/hud_component/station_selection.tscn" id="3_xly5e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u38dv"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.5516493, 0.6260412, 0.958088, 1)

[sub_resource type="LabelSettings" id="LabelSettings_u38dv"]

[node name="HUD" type="CanvasLayer" groups=["HUD"]]
script = ExtResource("1_u38dv")

[node name="Resources" type="VBoxContainer" parent="."]
offset_right = 375.0
offset_bottom = 103.0

[node name="HBoxContainer" type="HBoxContainer" parent="Resources"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Resources/HBoxContainer"]
layout_mode = 2
text = "Galaxium"

[node name="ProgressBar" type="ProgressBar" parent="Resources/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_u38dv")
show_percentage = false

[node name="GalaxiumValue" type="Label" parent="Resources/HBoxContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="GalaxiumPerSecond" type="Label" parent="Resources/HBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_u38dv")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Materials" type="HBoxContainer" parent="Resources"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Resources/Materials"]
layout_mode = 2
text = "Materials"

[node name="ProgressBar" type="ProgressBar" parent="Resources/Materials"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_u38dv")
show_percentage = false

[node name="MaterialsValue" type="Label" parent="Resources/Materials/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message_Panel" type="Panel" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -258.36
offset_right = 258.36
offset_bottom = 127.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_6p52h")

[node name="Message" type="Label" parent="Message_Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "NEXT WAVE
5 Sec"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradePanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -573.75
offset_top = -313.75
offset_right = 573.75
offset_bottom = 313.75
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_6p52h")

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -407.0
offset_top = -486.75
offset_right = 409.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 0

[node name="UpgradeContainer" type="HBoxContainer" parent="UpgradePanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 260

[node name="Label" type="Label" parent="UpgradePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -245.25
offset_right = 245.25
offset_bottom = 108.75
grow_horizontal = 2
theme_override_font_sizes/font_size = 52
text = "UPGRADE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="station_menu" parent="." instance=ExtResource("3_xly5e")]
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
grow_horizontal = 1
grow_vertical = 0

[connection signal="emit_spawn_request" from="station_menu" to="." method="_on_station_menu_emit_spawn_request"]
